tests/compile_fail/filters_incompatible_root_type.stderr
error[E0433]: failed to resolve: use of undeclared type `Path`
  --> tests/compile_fail/filters_incompatible_root_type.rs:29:24
   |
29 |     let company_path = Path::<company_fields::Headquarters, Company, Company>::new();
   |                        ^^^^ use of undeclared type `Path`
   |
help: consider importing one of these structs
   |
3  + use std::path::Path;
   |
3  + use frunk::path::Path;
   |
3  + use tnuctipun::Path;
   |
